--- a/package.json
+++ b/package.json
@@ -11,15 +11,11 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
-  "devDependencies": {
-    "json-server": "^0.17.0"
-  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "server": "json-server db.json -W --port 3333"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
